src/components/header/Header.module.sass
@import '../../globals'

.headerContainer
    display: flex
    flex-direction: column
    align-items: center
    background-image: url('../../assets/img/bg.jpg')
    background-size: cover
    background-repeat: no-repeat
    color: $white
    .content
        margin-top: 100px
        margin-bottom: 200px
        display: flex
        flex-direction: column
        justify-content: center
        width: 1000px
        h1
            font-weight: 500
            line-height: 1.5
            padding-inline: 20px
        span
            padding-inline: 20px
            margin-bottom: 25px
            font-size: 32px
            a
                color: $white       
                &:hover
                    color: $secondary
        button
            @include button($white, $black)
            width: 150px

@media (max-width: 1000px)
    .headerContainer
        .content
            width: 100%

@media (max-width: 992px)
    .headerContainer
        padding-left: 25px
        padding-right: 25px
        
@media (max-width: 768px)
    .headerContainer
        .content
            h1
                font-size: 24px
            span
                font-size: 26px
            button
                font-size: 12px
                width: 130px

